# floodstan

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  azure-pipelines.yml  env_floodstan.yml  env_mini.yml  env_nriv_v2.yml  env_nriv_v3.yml  pyproject.toml  setup.cfg  setup.py
.azure_devops/: azure-pipelines.yml
nrivfloodfreqstan/: __init__.py  bivariate_normal_probability.py  copulas.py  gls.py  marginals.py  sample.py  sfsample.py
scripts/: check_logpearson3_continuation.py  check_stedinger_quantile_estimators.py  compare_quantile_estimators.py  define_priors.py  explore_gaussian_copula.py  explore_logpearson3_continuation.py  gamma_temme_check.py  gammacdf_check.py  gammacdf_check.stan  gammacdf_vs_normal.py  inverse_gamma_incomplete.py  logpearson3.stanfunctions  logpearson3_approx.stanfunctions  logpearson3_check.py  logpearson3_check.stan  logpearson3_run.py  logpearson3_run.stan  logpearson3_test.stan  run_logpearson3_continuation.py  test_logpearson3_continuation.py
tests/: bivariate_normal_probability.py  conftest.py  data_reader.py  generate_copula_test_data.py  sample_bivariate_cook.py  sample_univariate_cook.py  sample_univariate_cook.sh  stan_diag.txt  test_annual_maximum_series.py  test_copulas.py  test_count.py  test_discrete_sample.py  test_discretes.py  test_freqplots.py  test_gls.py  test_marginals.py  test_marginals_sample.py  test_quadapprox.py  test_readme.py  test_report.py  test_sample.py  test_sample_bivariate.py  test_sample_bivariate_cook.py  test_sample_bootstrap.py  test_sample_hierarchical.py  test_sample_importance.py  (+5 more)
(+306 files in other folders)
