[metadata]
name = nrivfloodfreqstan
version = 0.0.1
author=Julien Lerat
author_email=julien.lerat@csiro.au
description=Stan wrapping of flood frequency analysis models
long_description = file: README.md
license=MIT license
url = https://github.com/jlerat/nrivfloodfreqstan

[options]
packages = find:
include_package_data = True
requires-python = >=3.7

install_requires =
    cmdstanpy>=1.0.7

[options.package_data]
* =
    *.stan

[options.extras_require]
test =
    flake8
    pytest
    mypy
    isort
    black
