[metadata]
name = floodstan
version = 0.0.1
author=Julien Lerat
author_email=julien.lerat@csiro.au
description=Stan wrapping of flood frequency analysis models
long_description = file: README.md
license=MIT license
url = https://github.com/jlerat/nrivfloodfreqstan

[options]
packages = find:
include_package_data = True
requires-python = >=3.7

install_requires =
    cmdstanpy>=1.0.7

[options.package_data]
* =
    *.stan

[options.extras_require]
test =
    flake8
    pytest
    nrivfloodfreq
    statsmodels

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/floodstan/_version.py
versionfile_build = src/floodstan/_version.py
tag_prefix = v
parentdir_prefix = src/floodstan/_version.py

